fixed image sizes on smaller screens

--- a/css/single.css
+++ b/css/single.css
@@ -214,6 +214,10 @@ header img {
 		width: 400px;
 	}
 
+	#main img {
+		width: 100%;
+	}
+
 	#main h2 {
 		margin-top: 1em;
 		font-size: 1em;
